--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
   </style>
 </head>
 <body>
-  <h1>Índice de Reportes</h1>
+  <h1>Índice de Reportes con herramienta de Análisis</h1>
   <div class="button-container">
     <a href="reporte-snyk.html" class="button">Snyk</a>
     <a href="htmlcov/index.html" class="button">Sonar</a>
     <a href="reporte-semgrep.html" class="button">Semgrep</a>
   </div>
+
+  <h1>Índice de Reportes con Pruebas Unitarias</h1>
+  <div class="button-container">
+    <a href="reporte-prueba_unitaria.html" class="button">Pruebas Unitarias</a>
+  </div>
+  
 </body>
 </html>
