--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <h1>Índice de Reportes con Pruebas Unitarias</h1>
   <div class="button-container">
-    <a href="Pruebas-U/htmlcov/index.html" class="button">Pruebas Unitarias</a>
+    <a href="test_reports/result.html" class="button">Pruebas Unitarias</a>
   </div>
   
 </body>
