--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
     <a href="reporte-semgrep.html" class="button">Semgrep</a>
   </div>
 
-  <h1>Índice de Reportes con Pruebas Unitarias</h1>
+  <h1>Índice de Reportes con Pruebas </h1>
   <div class="button-container">
     <a href="test_reports/result.html" class="button">Pruebas Unitarias</a>
+     <a href="allure-report/index.html" class="button">Pruebas BDD</a>
+    <a href="mutmut-report/index.html" class="button">Pruebas Mutantes</a>
   </div>
+  
   
 </body>
 </html>
