--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <a href="test_reports/result.html" class="button">Pruebas Unitarias</a>
      <a href="allure-report/index.html" class="button">Pruebas BDD</a>
     <a href="mutmut-report/index.html" class="button">Pruebas Mutantes</a>
+    <a href="playwright-report/index.html" class="button">Pruebas UI</a>
   </div>
   
   
