--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
   <h1>Índice de Reportes con Pruebas </h1>
   <div class="button-container">
-    <a href="test_reports/result.html" class="button">Pruebas Unitarias</a>
+    <a href="htmlcov-u/index.html" class="button">Pruebas Unitarias</a>
      <a href="allure-report/index.html" class="button">Pruebas BDD</a>
-    <a href="mutmut-report/index.html" class="button">Pruebas Mutantes</a>
+    <a href="html/index.html" class="button">Pruebas Mutantes</a>
     <a href="playwright-report/index.html" class="button">Pruebas UI</a>
   </div>
   
