--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <h1>Índice de Reportes con Pruebas </h1>
   <div class="button-container">
-    <a href="htmlcov-u/index.html" class="button">Pruebas Unitarias</a>
+    <a href="report-unit/index.html" class="button">Pruebas Unitarias</a>
      <a href="allure-report/index.html" class="button">Pruebas BDD</a>
     <a href="html/index.html" class="button">Pruebas Mutantes</a>
     <a href="playwright-report/index.html" class="button">Pruebas UI</a>
