--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="button-container">
     <a href="test_reports/result.html" class="button">Pruebas Unitarias</a>
      <a href="allure-report/index.html" class="button">Pruebas BDD</a>
-    <a href="mutmut-report/index.html" class="button">Pruebas Mutantes</a>
+    <a href="report_mutante/index.html" class="button">Pruebas Mutantes</a>
   </div>
   
   
